<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hostel2"
    android:padding="10dp"
    tools:context=".Fac_Library">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/hostelhead1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:text="HOSTEL"
        android:textColor="#4d0000"
        android:textSize="18dp"
        android:shadowColor="#5c1314"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="0.01"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <View
        android:id="@+id/div1"
        android:layout_width="match_parent"
        android:layout_height="1.3dp"
        android:layout_below="@id/hostelhead1"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="135dp"
        android:layout_marginRight="135dp"
        android:layout_marginTop="5dp"
        android:background="#000000" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/div1">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/hostel1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hostel1"
                    android:textColor="#000000"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/hostel2tit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/hostel2tit"
                    android:textColor="#4d0000"
                    android:textSize="16dp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/hostel2des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hostel2des"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/hostel3tit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/hostel3tit"
                    android:textColor="#4d0000"
                    android:textSize="16dp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/hostel3des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hostel3des"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/hostel4tit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/hostel4tit"
                    android:textColor="#4d0000"
                    android:textSize="16dp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/hostel4des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hostel4des"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/hostel5tit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/hostel5tit"
                    android:textColor="#4d0000"
                    android:textSize="16dp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/hostel5des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hostel5des"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/hostellink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="RM"
                    android:text="Read More"
                    android:textAlignment="textEnd"
                    android:textColor="@drawable/color_readmore"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</RelativeLayout>
