<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sportsback"
    android:padding="10dp"
    tools:context=".Fac_Library">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/sporthead1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:text="PHYSICAL EDUCATION AND SPORTS"
        android:textColor="#4d0000"
        android:textSize="18dp"
        android:shadowColor="#8c2e36"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="0.01"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <View
        android:id="@+id/div1"
        android:layout_width="match_parent"
        android:layout_height="1.3dp"
        android:layout_below="@id/sporthead1"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="#000000" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/div1">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sporthead2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="- A Legacy of Honour - "
                    android:textAlignment="center"
                    android:textColor="#4d0000"
                    android:textSize="15dp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />
            </TableRow>

            <View
                android:id="@+id/div3"
                android:layout_width="match_parent"
                android:layout_height="1.3dp"
                android:layout_below="@id/sporthead2"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="5dp"
                android:background="#000000" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:src="@drawable/bulb" />

                <TextView
                    android:id="@+id/sporthead3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:text="@string/spor_up"
                    android:textColor="#4d0000"
                    android:textSize="15dp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />
            </TableRow>

            <View
                android:id="@+id/div2"
                android:layout_width="match_parent"
                android:layout_height="1.3dp"
                android:layout_below="@id/hospihead2"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#000000" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/spor1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/spor1"
                    android:textColor="#000000"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/spor2tit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/spor2tit"
                    android:textColor="#4d0000"
                    android:textSize="16dp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/spor2des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/spor2des"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/spor3tit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/spor3tit"
                    android:textColor="#4d0000"
                    android:textSize="16dp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/spor3des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/spor3des"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/spor4tit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/spor4tit"
                    android:textColor="#4d0000"
                    android:textSize="16dp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/spor4des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/spor4des"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/sportslink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="RM"
                    android:text="Read More"
                    android:textAlignment="textEnd"
                    android:textColor="@drawable/color_readmore"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</RelativeLayout>
