<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lib_back"
    android:padding="10dp"
    tools:context=".Fac_Library">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/libhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="LIBRARY"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:textSize="20dp"
        android:shadowColor="#5b5858"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="0.01"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <View
        android:id="@+id/div"
        android:layout_width="match_parent"
        android:layout_height="1.3dp"
        android:layout_below="@id/libhead"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginTop="5dp"
        android:background="#800000" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/div">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/libup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/libraryup"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/libmid1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/librarymid1"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20dp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />
            </TableRow>

            <View
                android:id="@+id/div1"
                android:layout_width="match_parent"
                android:layout_height="1.3dp"
                android:layout_below="@id/libmid1"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="#800000" />


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/libmid2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/librarymid2"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/libdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/librarydown"
                    android:layout_marginTop="10dp"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/liblink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="RM"
                    android:text="Read More"
                    android:textAlignment="textEnd"
                    android:textColor="@drawable/color_readmore"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</RelativeLayout>
